Допуск наклонного уровня измеряется в волатильностях, а не в доле цены
Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>